--- a/japon.html
+++ b/japon.html
@@ -60,12 +60,18 @@
 	</div>
 	<div class="element"> <!-- Mélissa -->
 		<h2>
-			Article 3 !!
+			Le Jrock
 		</h2>
 		<p>
-			Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
+			Le rock japonais, souvent appelé J-rock (ジェイロック, jeirokku?), est un sous-genre du rock mêlé à des éléments de musique japonaise. Ce type de musique émerge au Japon durant les années 1970, et se popularise plus tard hors des frontières, notamment aux États-Unis et en Europe. Contrairement aux autres style de J-pop, le J-rock possède ses propres caractéristiques musicales.<br/>
+
+Le rock psychédélique, inventé dans les années 1960 par l'underground américain et britannique prend, en arrivant au Japon, un parfum particulier (les musiciens de J-rock, contrairement à leurs homologues occidentaux, sont rarement drogués, allant même jusqu'à être, pour certains d'entre eux, anti-drogues, tels Takehisa Kosugi, Keiji Haino, Asahito Nanjo). Le rock psychédélique apparaît au Japon au milieu des années 1960. Quelques groupes locaux imitent alors les modèles anglais, notamment The Golden Cups, The Mops, The Dynamites et Jacks. Comme aux États-Unis et au Royaume-Uni, la musique psychédélique est liée à un mouvement politique de jeunes étudiants. Ainsi un boom économique amène de nombreux jeunes dans les universités où les mouvements politique radicaux abondent. Au centre de ce mouvement des révoltes étudiantes de Kyōto, on trouve les groupes Les Rallizes Dénudés et Taj Mahal Travellers, suivis par Lost Aaraaff. Le rock japonais a été initialement inspiré par le tout premier concert donné par le groupe britannique The Beatles en 1966. À cette époque, le style unique des Beatles influence conséquemment le public japonais.<br/>
+
+Dans les années 1970, le rock s'étend rapidement des pays aux continents, avant d'être massivement popularisé au Japon ; dès lors le J-rock prend place et, tandis que la scène rock internationale change de style, le J-rock reste le même dans ses caractéristiques musicales. Des chanteurs-compositeurs comme Kazuki Tomokawa et Kan Mikami deviennent populaires. Une scène folk-rock apparaît alors, conduite par Magical Power Mako. En même temps un rock progressif radical évolue avec After Dinner, YB02, Kenso et Koenji Hyakkei2. En 1989, un groupe de rock violent appelé X Japan popularise le premier mouvement rock japonais, connu sous le nom de Visual Kei1. Dans ce mouvement, les fans masculins portent du maquillage, des vêtements PVC ou en cuir, et autres accessoires caractéristiques à ce mouvement. À la fin des années 1980, des groupes de rock comme Loudness ou Luna Sea aident à définir l'esthétique du Visual Kei dans la pop et le rock japonais. Il existe tout de même des groupes de Visual Kei qui se démarquent par leur style musical autant que vestimentaire comme Dir en grey ou bien encore the GazettE. Des groupes de heavy metal et de glam metal apparaissent, directement influencés par des groupes occidentaux comme Deep Purple et Kiss.<br/>
+
+Enfin, le rock alternatif japonais prend la forme du noise rock, popularisé par des groupes comme Boredoms, ou, dans un registre plus punk, Shonen Knife, trio féminin popularisé par Kurt Cobain.
 		</p>
-		<h3>Source : <a href="#">blabla</a>
+		<h3>Source : <a href="http://fr.wikipedia.org/wiki/Rock_japonais">Wikipedia</a>
 		</h3>
 	</div>
 
