Ajout de l'image sur l'article Jrock

--- a/japon.html
+++ b/japon.html
@@ -71,6 +71,8 @@ Dans les années 1970, le rock s'étend rapidement des pays aux continents, avan
 
 Enfin, le rock alternatif japonais prend la forme du noise rock, popularisé par des groupes comme Boredoms, ou, dans un registre plus punk, Shonen Knife, trio féminin popularisé par Kurt Cobain.
 		</p>
+		
+		<img src="LMC.jpg" alt="LMC"/>
 		<h3>Source : <a href="http://fr.wikipedia.org/wiki/Rock_japonais">Wikipedia</a>
 		</h3>
 	</div>
